Polish (#1376)
* polish : code

* spotless fix

* removes generated code

* adds hibernate enhance